# mitoseg

./: .clang-format  CMakeLists.txt  README.md  settings-preset1.yaml  settings-preset2.yaml  settings-preset3.yaml
docker/: Dockerfile  docker-mitoseg.cmd  docker-mitoseg.sh  entrypoint.sh
src/: curve.cpp  curve.h  datasets.cpp  datasets.h  definitions.h  detection.cpp  detection.h  imod.cpp  imod.h  main.cpp  mitoseg-gui.py  phase1_main.cpp  phase1_main.h  phase2_main.cpp  phase2_main.h  phase3_main.cpp  phase3_main.h  poly.cpp  poly.h  preprocess.cpp  preprocess.h  settings_parser.cpp  settings_parser.h  snake25d.cpp  snake25d.h  visualizer.cpp  visualizer.h
